<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 Hendrik Depauw
  ~ Copyright (c) 2017 Lorenz van Herwaarden
  ~ Copyright (c) 2017 Nick Aelterman
  ~ Copyright (c) 2017 Olivier Cammaert
  ~ Copyright (c) 2017 Maxim Deweirdt
  ~ Copyright (c) 2017 Gerwin Dox
  ~ Copyright (c) 2017 Simon Neuville
  ~ Copyright (c) 2017 Stiaan Uyttersprot
  ~
  ~ This software may be modified and distributed under the terms of the MIT license.  See the LICENSE file for details.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="170dp">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/ic_splash"
            android:layout_gravity="center"/>
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="E-mail"
                android:inputType="text"
                android:textColor="#000"
                android:background="#f0f0f4"
                android:padding="12dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:drawableLeft="@drawable/ic_mail"
                android:drawablePadding="16dp"
                />
            <EditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:background="#f0f0f4"
                android:textColor="#000"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="12dp"
                android:drawablePadding="16dp"
                android:drawableLeft="@drawable/ic_locker"
                />
            <Button
                android:id="@+id/sinin"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:elevation="1dp"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:gravity="center"
                android:text="Sign In"
                android:textSize="16sp"
                android:background="@drawable/button_rounded"
                android:textColor="@drawable/button_text_color"
                android:layout_gravity="center"
                />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/button_facebook_login"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:elevation="1dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="16sp"
                android:background="@drawable/button_rounded_fb"
                android:textColor="@drawable/button_text_color"
                android:layout_centerInParent="true"
                android:layout_gravity="center"/>


            <TextView
                android:id="@+id/signUp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account?"
                android:textSize="16sp"
                android:layout_gravity="center" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>