...
  ~ This software may be modified and distributed under the terms of the MIT license.  See the LICENSE file for details.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_start"
        android:enabled="true"
        android:icon="@drawable/ic_navigation_start"
        android:title="@string/navigation_text_start"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_routesettings"
        android:enabled="true"
        android:icon="@drawable/ic_distance"
        android:title="Route Settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@drawable/ic_navigation_history"
        android:title="@string/navigation_text_history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
...
