...
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:clipToPadding="false">

                <Button
                    android:id="@+id/discard"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:elevation="1dp"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
...
                    android:background="@drawable/button_rounded"
                    android:backgroundTint="@color/colorRed"
                    android:textColor="@drawable/button_text_color"
                    android:text="@string/discard_run" />

                <Button
                    android:id="@+id/save"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:elevation="1dp"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
...
