...

    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:id="@+id/rv"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        />

    <ProgressBar
        android:id="@+id/progressBar"
...
