...
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@drawable/button_text_color"
                    android:text="@string/generate_alternative"
                    android:enabled="false"/>

                <Button
                    android:id="@+id/start_button"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:elevation="1dp"
                    android:background="@drawable/button_rounded"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginBottom="20dp"
...
